--- a/style.css
+++ b/style.css
@@ -25,20 +25,31 @@ body{
     width: 120px;
     height: 120px;
     box-sizing: border-box;
-    background-color: white;
-    border-radius: 5px ;
+    background-color: white; 
+    border-radius: 5px ; 
+    transition: box-shadow ease 150ms;
     margin: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+}
+.box:hover{
+    box-shadow: inset 11px 11px 12px 6px rgba(0, 0, 0, 0.39) ;
+    transition: box-shadow ease 150ms;
 }
 #heading{
     font-size: 4rem;
     margin-bottom: 15px;
+    font-family: 'Josefin Sans', sans-serif;
+    color: gold;
+    text-shadow: 1px 1px 1px gold;
 }
 #info{
     font-size: 2rem;
     margin-top: 15px;
+    font-family: 'Josefin Sans', sans-serif;
+    color: white;
 }
 .circle{
     width: 90px;
