--- a/style.css
+++ b/style.css
@@ -40,14 +40,9 @@ body{
     transition: box-shadow ease 150ms;
 }
 .boxHoverForcircle{
-    box-shadow: var(--boxShadow, #2701ff 0px 0px 6px 6px) ;
+    box-shadow: var(--boxShadow, rgb(255, 50, 50) 0px 0px 6px 6px) ;
     transition: box-shadow ease 150ms;
 }
-/* .box:hover{
-    box-shadow: gold 0px 0px 6px 6px ;
-    box-shadow: var(--boxShadow, gold 0px 0px 6px 6px) ;
-    transition: box-shadow ease 150ms;
-} */
 #heading{
     font-size: 4rem;
     margin-bottom: 15px;
@@ -65,7 +60,7 @@ body{
     width: 90px;
     height: 90px;
     border-radius: 50%;
-    border: 15px solid #4a00e0;
+    border: 15px solid rgb(255, 50, 50);
     box-sizing: border-box;
 }
 .cross{
@@ -92,3 +87,92 @@ body{
     width: 100%;
 
 }
+.winPopUp{
+    width: 50%;
+    height: 40%;
+    position: absolute;
+    z-index: 20;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px ;
+    backdrop-filter: blur(6px) saturate(50%);
+    -webkit-backdrop-filter: blur(6px) saturate(50%);
+    background-color: rgba(53, 53, 53, 0.5);
+    transform: scale(1);
+    text-shadow: 0px 0px 20px rgb(255, 50, 50);
+    transition: transform ease 250ms;
+}
+.winPopUp h1{
+    font-size: 5rem;
+    font-family: 'Josefin Sans', sans-serif;
+    color: white;
+    animation: scaling 3s infinite ease;    
+}
+@keyframes scaling {
+    0% {transform: scale(0.7);}
+    50% {transform: scale(1);}
+    100% {transform: scale(0.7);}
+    
+}
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.2;
+}
+.hidden{
+    transform: scale(0);
+    transition: transform ease 250ms;
+}
+button {
+    align-items: center;
+    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    position: absolute;
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 18px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: all .3s;
+    z-index: 21;
+    bottom: 15px;
+   }
+   
+   button:active,
+   button:hover {
+    outline: 0;
+   }
+   
+   button span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+   }
+   
+   button:hover span {
+    background: none;
+   }
+   
+   button:active {
+    transform: scale(0.9);
+   }
